monticore-generator/src/test/resources/cocos/invalid/A4032/A4032.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4032;

grammar A4032 {

 enum A = "a";

 astrule A;

}
